--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"COOLSMP2.aternos.me:43074","name":"darpanking","port":"43074"}
+{"ip":"COOLSMP2.aternos.me","name":"darpanking","port":"43074"}
